# elementals

./: Cargo.toml  README.md  TILESET_GENERATOR.md  create_assets.sh  dev-run.sh  grounds.yaml  pawns.yaml  props.yaml  settings.yaml
.cargo/: config.toml
assets/shaders/: water.wgsl
assets/tilesets/: grounds.yaml  pawns.yaml  props.yaml
src/: main.rs
src/components/: mod.rs
src/resources/: mod.rs
src/systems/: ai.rs  async_pathfinding.rs  camera.rs  debug_display.rs  fps_counter.rs  input.rs  mod.rs  pathfinding_cache.rs  pawn.rs  pawn_config.rs  player.rs  spawn.rs  tilemap.rs  water_shader.rs  world_gen.rs
src/tests/: async_pathfinding_tests.rs  debug_terrain_tests.rs  hunt_solo_tests.rs  mod.rs  movement_tests.rs  path_segment_regression_tests.rs  pathfinding_cache_tests.rs  pawn_tests.rs  size_pathfinding_tests.rs  world_gen_tests.rs
